# python-compition-preparation

./: README.md  app.py  check_one_segment.py  cp.py  find_max_averge.py  interpreter-learning-resources.txt  lenght_of_last_word.py  main.py  python veriable.txt  test.py
01 - Python - Overview/: main.py
hatch/my-project/: LICENSE.txt  pyproject.toml
hatch/my-project/src/my_project/: __about__.py  __init__.py  main.py
pipvenv/: main.py
poetory/my_app/: pyproject.toml
poetory/my_app/src/my_app/: main.py
