[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "waqas-khan-codecanvas",email = "waqaskhan11411704@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "main", from = ".\\src\\my_app\\"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
